--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="title_activity_single_rating">SingleRating</string>
     <string name="title_activity_login">Login / Register</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="passwordnotice">Passwords are not transmitted securely.</string>
 </resources>
